--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "node": ">=14.19.1 <=18.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "workspaces": [
+    "./src/plugins/*"
+  ]
 }
