--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 JWT_SECRET=tobemodified
+DATABASE_HOST=0.0.0.0
+DATABASE_NAME=admin
+DATABASE_USERNAME=admin
+DATABASE_PASSWORD=12345
