--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "uuid": "e028e71b-877f-41fd-8139-d23071a038ae"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
-    "npm": ">=6.0.0"
+    "node": "18.15.0",
+    "npm": "6.14.18"
   },
   "license": "MIT",
   "workspaces": [
